--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <!-- Three columns of text below the carousel -->
           <div class="row featuresBottom">
             <div class="col-lg-4">
-              <img class="rounded-circle" src="./img/serviciotecnico.jpg" alt="servicio tecnico"
+              <img class="rounded-circle" src="../img/serviciotecnico.jpg" alt="servicio tecnico"
                 width="140" height="140">
 
               <h2>Respaldo</h2>
@@ -130,7 +130,7 @@
                 del pais, en los cuales recibira descuentos exclusivos.</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-              <img class="rounded-circle" src="./img/garantia.jpg" alt="Garantia" width="140"
+              <img class="rounded-circle" src="../img/garantia.jpg" alt="Garantia" width="140"
                 height="140">
 
               <h2>Garantia</h2>
@@ -138,8 +138,8 @@
                 Condiciones aplican.</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-              <img class="rounded-circle" src="./img/financiacion.jpg" alt="financiacion"
-                width="140" height="140">
+              <img class="rounded-circle" src="img/financiacion.jpg" alt="financiacion" width="140"
+                height="140">
 
               <h2>Financiacion</h2>
               <p>Contamos con el financiamiento de los <br> principales banco de plaza con <br> las
