--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
   <script src="js/api.js"></script>
   <!-- script sweetalert2 ---------------------------------->
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="/js/sweetAlert.js"></script>
+  <script src="js/sweetAlert.js"></script>
 </body>
 
 </html>
