--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <div>
-          <a class="navbar-brand" href="index.html"><img class="logo" src="img/logo.jpg"
+          <a class="navbar-brand" href="pages/buyEnd.html"><img class="logo" src="img/logo.jpg"
               alt="logo"></a>
           <span id="totalItemsCarrito" class="badge bg-primary rounded-pill cartTotal">0</span>
         </div>
@@ -49,7 +49,19 @@
               <a class="nav-link" href="#carrito" tabindex="-1" aria-disabled="true">Carrito</a>
             </li>
           </ul>
-          <h3 id="titulo" class="titulo">Compralo Ya!</h3>
+          <div>
+            <a href="index.html" style="text-decoration: none; width: 400px;">
+              <h3 id="titulo" style="width: max-content;" class="titulo">Compralo Ya!</h3>
+            </a>
+          </div>
+          <div>
+            <a href="pages/buyEnd.html"><button class="btn btn-warning finalizar_btn">Finalizar
+                compra</button></a>
+          </div>
+
+
+
+
         </div>
       </div>
 
@@ -227,27 +239,8 @@
       </div>
     </section>
 
-    <section id="carrito">
 
-      <div class="row g-5 carritoStyle">
-        <div class="order-md-last">
-          <h4 class="d-flex justify-content-between align-items-center mb-3">
-            <span class="text-primary">Carrito</span>
-            <!-- <span id="totalItemsCarrito" class="badge bg-primary rounded-pill">0</span> -->
-          </h4>
-          <ul class="list-group mb-3" id="selectorCarrito">
-          </ul>
-          <ul>
-            <li class="list-group-item d-flex justify-content-between">
-              <span>Total (USD)</span>
-              <strong id="montoTotal"></strong>
-            </li>
-          </ul>
-          <button class="btn btn-danger" onclick="emptyCart();vaciarCarrito()">Vaciar
-            Carrito</button>
-          <button class="btn btn-success finalizar_btn" onclick="endBuy()">Finalizar
-            compra</button></a>
-    </section>
+
 
 
 
@@ -270,9 +263,10 @@
 
   <!-- My JAVASCRIPT -->
 
-  <script src="js/financiacion.js"></script>
-  <script src="js/stock.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/stock.js"></script>
+  <script src="js/showStock.js"></script>
+  <script src="js/financiacion.js"></script>
   <script src="js/api.js"></script>
   <!-- script sweetalert2 ---------------------------------->
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
