--- a/pages/buyEnd.html
+++ b/pages/buyEnd.html
@@ -25,7 +25,7 @@
             <div class="container-fluid">
                 <div>
                     <a class="navbar-brand" href="/pages/buyEnd.html"><img class="logo"
-                            src="/img/logo.jpg" alt="logo"></a>
+                            src="./img/logo.jpg" alt="logo"></a>
                     <span id="totalItemsCarrito"
                         class="badge bg-primary rounded-pill cartTotal">0</span>
                 </div>
