--- a/pages/buyEnd.html
+++ b/pages/buyEnd.html
@@ -13,7 +13,7 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
         crossorigin="anonymous">
     <!-- MY CSS ******************************************************************************* -->
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
 </head>
 
@@ -25,7 +25,7 @@
             <div class="container-fluid">
                 <div>
                     <a class="navbar-brand" href="/pages/buyEnd.html"><img class="logo"
-                            src="/img/logo.jpg" alt="logo"></a>
+                            src="../img/logo.jpg" alt="logo"></a>
                     <span id="totalItemsCarrito"
                         class="badge bg-primary rounded-pill cartTotal">0</span>
                 </div>
@@ -99,11 +99,11 @@
 
         </main>
 
-        <script src="/js/endBuyCart.js"></script>
-        <script src="/js/stock.js"></script>
+        <script src="../js/endBuyCart.js"></script>
+        <script src="../js/stock.js"></script>
         <!-- scripts de sweetAlert ---------------------------------------------- -->
         <!-- script sweetalert2 ---------------------------------->
-        <script src="/js/sweetAlert.js"></script>
+        <script src="../js/sweetAlert.js"></script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
