--- a/pages/buyEnd.html
+++ b/pages/buyEnd.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <div>
-                    <a class="navbar-brand" href="/pages/buyEnd.html"><img class="logo"
+                    <a class="navbar-brand" href="../pages/buyEnd.html"><img class="logo"
                             src="../img/logo.jpg" alt="logo"></a>
                     <span id="totalItemsCarrito"
                         class="badge bg-primary rounded-pill cartTotal">0</span>
@@ -39,7 +39,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page"
-                                href="/index.html">Inicio</a>
+                                href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#formulario">Financiacion</a>
@@ -53,7 +53,7 @@
                         </li>
                     </ul>
                     <div>
-                        <a href="/index.html" style="text-decoration: none; width: 400px;">
+                        <a href="../index.html" style="text-decoration: none; width: 400px;">
                             <h3 id="titulo" style="width: max-content;" class="titulo">Compralo Ya!
                             </h3>
                         </a>
