--- a/pages/buyEnd.html
+++ b/pages/buyEnd.html
@@ -59,7 +59,7 @@
                         </a>
                     </div>
                     <div>
-                        <a href="/index.html"><button
+                        <a href="../index.html"><button
                                 class="btn btn-warning finalizar_btn">Volver</button></a>
                     </div>
                 </div>
