--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
               <a class="nav-link" href="#cards">Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#carrito" tabindex="-1" aria-disabled="true">Carrito</a>
+              <a class="nav-link" href="pages/buyEnd.html" tabindex="-1"
+                aria-disabled="true">Carrito</a>
             </li>
           </ul>
           <div>
@@ -55,8 +56,8 @@
             </a>
           </div>
           <div>
-            <a href="pages/buyEnd.html"><button class="btn btn-warning finalizar_btn">Finalizar
-                compra</button></a>
+            <a href="pages/buyEnd.html"><button
+                class="btn btn-success finalizar_btn">Checkout</button></a>
           </div>
 
 
