--- a/pages/buyEnd.html
+++ b/pages/buyEnd.html
@@ -111,7 +111,9 @@
 
         </main>
 
+
         <footer class="container footerEnd">
+            <hr class="featurette-divider">
             <p class="float-end"><a href="#">Al Inicio</a></p>
             <p>&copy; 2017–2021 Company, Inc. &middot; <a href="#inicio">Privacy</a> &middot; <a
                     href="#">Terms</a></p>
