--- a/pages/buyEnd.html
+++ b/pages/buyEnd.html
@@ -119,6 +119,11 @@
                     href="#">Terms</a></p>
         </footer>
 
+        <!-- BOOTSTRAP JAVASCRIPT -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+            crossorigin="anonymous"></script>
+
         <script src="../js/endBuyCart.js"></script>
         <script src="../js/stock.js"></script>
         <!-- scripts de sweetAlert ---------------------------------------------- -->
