--- a/index.html
+++ b/index.html
@@ -232,9 +232,10 @@
     <section id="cards">
 
       <h2 class="stockHeader">Productos Disponibles:</h2>
-
-
+      <div style="text-align: center; padding-top: 20px;">
+        <input type="text" placeholder="Buscar..." id="searchBar" name="searchBar">
       </div>
+
       <div id="contenedor" class="row contenedor-style">
 
       </div>
